# CM5-charge

./: .gitignore  CM5.sh  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
chargemol/: atomic_densities.tgz
chargemol/src/: Makefile  chargemol.f08  compile_parallel.txt
cm5pac/: ._cm5pac  ._cm5pac.f  cm5pac  cm5pac.f
cm5pac/Tests/: ._test8  test1.inp  test1_RevC01.out  test2_RevC01.out  test3.inp  test3_RevC01.out  test4.inp  test4_RevA02.out  test4_RevC01.out  test6_RevA02.out  test6_RevC01.out  test7_RevA02.out  test7_RevC01.out  test8
package/: CM5.sh
package/chargemol/src/: module_DDEC6_valence_iterator.f08  module_check_grid_spacing.f08
package/cm5pac/Tests/: test1_RevA02.out  test2.inp  test2_RevA02.out  test3_RevA02.out  test5.inp  test5_RevA02.out  test5_RevC01.out  test6.inp  test7.inp  test8.out
tests/: OUTCAR  POSCAR
